Fix all ../Pictures/image.jpg calls in html files so that all icons are visible.

--- a/frontend/About/About.css
+++ b/frontend/About/About.css
@@ -3,7 +3,7 @@
     position: relative;
     height: 40vh;
     min-height: 220px;
-    background: url('../pictures/clouds.jpg') no-repeat center center/cover;
+    background: url('../Pictures/clouds.jpg') no-repeat center center/cover;
     display: flex;
     justify-content: center;
     align-items: center;
